tab gaps fixed?

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,7 +110,7 @@ a:hover {
 	display:block;
 	width: calc(100% - 0.5rem);
 	height: 3vmin;
-	margin: 0 auto;
+	margin: -0.1rem auto -0.1rem;
 	border-top-left-radius: var(--border-radii);
 	border-top-right-radius: var(--border-radii);
 }
@@ -127,21 +127,20 @@ main > section {
 	scroll-margin-top: calc(var(--tabheight) + 3vmin);
 }
 
-section > article {
+main > section > article {
 	font-size: clamp(0.9rem, 3vw, 1.1rem);
 	overflow: visible;
 	margin-inline: auto;
 	padding: 0.5em 0;
 }
 
-section > article p, section > article ul {
-	margin: 0.3rem auto 0.8rem;
-	max-width: 60ch;
-}
-
 section > article ul {
 	list-style-type: none;
-	text-align: center;
+}
+
+/* section > article p, section > article ul {
+	margin: 0.3rem auto 0.8rem;
+	max-width: 60ch;
 }
 
 section > article ul li {
@@ -161,7 +160,7 @@ section > article > a {
 
 a img {
 	max-width: 100%;
-}
+} */
 
 
 .backtotop {
@@ -211,7 +210,7 @@ a img {
 }
 #sara {
 	z-index: 1;
-	top: calc(var(--tabheight) + 3vmin + 0.25rem);
+	top: calc(var(--tabheight) + 3vmin);
 	background-color: var(--sara);
 }
 #gosara {
@@ -268,7 +267,7 @@ a img {
 	gap: calc(0.25rem + 0.5vmin);
 }
 
-#work .container {
+.container {
 	width: calc(50% - (0.25rem + 0.5vmin) / 2);
 	max-width: max(800px, 100%/3);
 	aspect-ratio: 1;
@@ -278,8 +277,7 @@ a img {
 	gap: calc(0.25rem + 0.5vmin);
 }
 
-#work .container > div,
-#work .container button {
+.container > :is(div, button) {
 	border-radius: var(--border-radii);
 	background-size: cover;
 	background-position: center;
@@ -287,15 +285,12 @@ a img {
 	transition: transform 0.2s ease;
 	box-shadow: 2px 2px 10px -8px var(--shadow);
 }
-#work .container > button:hover,
-#work .container > button:focus,
-#work .container > div:hover,
-#work .container > div:focus {
+.container > :is(button:hover, button:focus, div:hover, div:focus-visible) {
 	background-color: var(--soprano2nd);
 	background-repeat: no-repeat;
 	background-size: 0;
-	transition: transform 0.1s ease;
 	transform: translate(1px, 1px);
+	transition: transform 0.1s ease;
 	box-shadow: 2px 2px 10px -9px var(--shadow);
 }
 #work .caption {
